--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .text{
-    color: #009933;;
+    color: #fcba03
 }
 
 .navbar{
@@ -35,8 +35,8 @@ body {
 }
 
 .text-bg{
-    background-color: #009933;;
-    color: white;
+    background-color: black;
+    color: #fcba03;
     padding: 5px;
 }
 
@@ -57,4 +57,8 @@ body {
 
 .dish-name{
     margin-left: 10%;
+}
+
+.color{
+    background-color: #fcba03;
 }
